3-Kubectl-Deploy/production/frontend/templates/httproute.yaml
---
# Source: frontend/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: production-frontend-route
  namespace: production
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: production-frontend
    app.kubernetes.io/managed-by: plain-manifests
spec:
  parentRefs:
  - name: shared-gateway
    namespace: nginx-gateway
  hostnames:
  - todo-app.192.168.0.110.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /register
    backendRefs:
    - name: user-service
      port: 8001
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: user-service
      port: 8001
  - matches:
    - path:
        type: PathPrefix
        value: /users
    backendRefs:
    - name: user-service
      port: 8001
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todo-service
      port: 8002
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: user-service
      port: 8001
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 3000
